Updated styles and responsive design

--- a/index.html
+++ b/index.html
@@ -173,9 +173,9 @@
                     </div>
                 </div>
                 <div class="recent-work-item" onclick="scrollToContact()">
-                    <img src="images/third.jpg" alt="Work 4">
+                    <img src="images/new.jpeg" alt="Work 4">
                     <div class="recent-work-content">
-                        <h3>Air Compressor</h3>
+                        <h3>Receiver Tank</h3>
                         <p>Air compressors are devices that convert power into kinetic energy by compressing and pressurizing air. The compressed air can then be used for a variety of applications, such as powering tools, inflating tires, or operating pneumatic equipment.</p>
                     </div>
                 </div>
