--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                         <h3>All Compressor Solutions</h3>
                     </div>
                     <div class="home-image">
-                        <img src="./images/brijesh.png" alt="Person Image">
+                        <img src="./images/test.png" alt="Person Image">
                     </div>
                 </div>
             </div>
